Grok changes
************

1.3 (unreleased)
================

- The `IGrokSecurityView` interface has been to ``grokcore.view``. 

- The `make_checker` util function has been moved to ``grokcore.view``. 

- Update to latest martian and grokcore.component.

1.2.1 (2010-10-26)
==================

- Grok tutorial example projects updated.

- Documentation updates in preparation for the Grok Toolkit 1.2 release.

- Use zc.buildout-1.5.2.

1.2 (2010-10-13)
================

- No changes were necessary.

1.2a (2010-10-07)
=================

- Grok and the Grok Toolkit now use zc.buildout-1.5.1 that should simplify
  Grok's installation story significantly. It is now possible to use a system
  Python installation for installing Grok. This obsoletes the ``virtualenv``
  requirement.

- Grok and the Grok Toolkit will use the ZTK-1.0 release. Note though that
  several package versions are overridden to include bugfix releases.

- Various dependencies have been updated.

- Removed z3c.testsetup-specific test collector from grok.testing. You can
  still use z3c.testsetup with grok, but have to declare the dependency in your
  project's ``setup.py`` explicitly.

- The grok.View component now uses the grokcore.message package for its
  `flash` method.

- Grok test zcml now explicitly sets a defaultView name (to `index.html`).
  This has been added since we no longer depend on packages such as
  zope.app.zcmlfiles, that used to take care of that configuration step.

- Internationalization of title and description of roles are not lost anymore.

- `create_application` now raises a `KeyError`, in cases of key duplication,
  to match the ``zope.container`` behavior. Tests have been adapted accordingly.

- Added `KeyError` error handling to the existing `DuplicationError`, to fit
  the ``zope.container`` changes. Tests have been adapted accordingly.

1.1.1 (2010-05-30)
==================

- Make use of the groktoolkit 1.1.1 that includes several bugfix releases