@@ -29,13 +29,13 @@ setup(
     description='Grok: Now even cavemen can use Zope 3!',
     long_description=long_description,
     license='ZPL',
-    classifiers=['Environment :: Web Environment',
-                 'Intended Audience :: Developers',
-                 'License :: OSI Approved :: Zope Public License',
-                 'Programming Language :: Python',
-                 'Framework :: Zope3',
-                 ],
-
+    classifiers=[
+        'Environment :: Web Environment',
+        'Intended Audience :: Developers',
+        'License :: OSI Approved :: Zope Public License',
+        'Programming Language :: Python',
+        'Framework :: Zope3',
+        ],
     packages=find_packages('src'),
     package_dir = {'': 'src'},
     include_package_data = True,
@@ -46,6 +46,7 @@ setup(
         'grokcore.component',
         'grokcore.content',
         'grokcore.formlib >= 1.4',
+        'grokcore.json',
         'grokcore.message',
         'grokcore.security >= 1.1',
         'grokcore.site',
