@@ -37,6 +37,7 @@
 
   <include package="grokcore.annotation" />
   <include package="grokcore.formlib" />
+  <include package="grokcore.json" />
   <include package="grokcore.site" />
   <include package="grokcore.view" />
   <include package="grokcore.view" file="publication_security.zcml" />
